# simple-rpg-server

./: .cmake-format.json  CMakeLists.txt  Dockerfile  README.md  config.json  db.sql  skotnikovda:simple-rpg-server at dev.html
application/: CMakeLists.txt
application/include/public/application/: applicationerror.h  lastfightstorage.h  registry.h  service.h
application/include/public/application/requests/: buyrequest.h  createguildrequest.h  equiprequest.h  fightrequest.h  joinguildrequest.h  sellrequest.h  unequiprequest.h
application/src/: registry.cc  service.cc
db/: enemies.sql  item_types.sql
domain/: CMakeLists.txt
domain/include/public/domain/: bestiary.h  character.h  domainerror.h  equipment.h  experience.h  fight.h  gold.h  guild.h  inventory.h  item.h  monster.h  shop.h  user.h
domain/include/public/domain/bestiary/: monsterindex.h
domain/include/public/domain/character/: factory.h  id.h  name.h  repository.h  service.h
domain/include/public/domain/errors/: aliasexistserror.h
domain/include/public/domain/fight/: actor.h  damage.h  event.h
domain/include/public/domain/guild/: id.h  leaderid.h  member.h  name.h  repository.h
domain/include/public/domain/inventory/: itemcount.h  itemindex.h  size.h
domain/include/public/domain/item/: buyprice.h  category.h  id.h  name.h  sellprice.h
domain/include/public/domain/monster/: id.h  name.h
domain/include/public/domain/properties/: attack.h  defense.h  health.h  level.h
domain/include/public/domain/shop/: itemindex.h
domain/include/public/domain/user/: accesstoken.h  alias.h  credentials.h  factory.h  id.h  password.h  repository.h  secret.h
domain/src/: bestiary.cc  character.cc  equipment.cc  experience.cc  fight.cc  gold.cc  guild.cc  inventory.cc  item.cc  monster.cc  shop.cc  user.cc
domain/src/bestiary/: monsterindex.cc
domain/src/character/: factory.cc  id.cc  name.cc  service.cc
domain/src/fight/: damage.cc  event.cc
domain/src/guild/: id.cc  leaderid.cc  member.cc  name.cc
domain/src/inventory/: itemcount.cc  itemindex.cc  size.cc
domain/src/item/: id.cc  name.cc
domain/src/monster/: id.cc  name.cc
domain/src/properties/: attack.cc  defense.cc  health.cc  level.cc
domain/src/shop/: itemindex.cc  product.cc
domain/src/user/: alias.cc  factory.cc  id.cc  password.cc  secret.cc
domain/test/: charactertest.cc
httpadapter/: CMakeLists.txt
httpadapter/include/public/httpadapter/actions/: accesstokengetter.h  bestiarygetter.h  buyer.h  charactergetter.h  equiper.h  equipmentgetter.h  fightcreator.h  fightgetter.h  guildcreator.h  guildgetter.h  guildjoiner.h  guildleaver.h  guildlistgetter.h  healer.h  inventorygetter.h  seller.h  shopgetter.h  unequiper.h  usercreator.h
httpadapter/include/public/httpadapter/boost/: iocontext.h  listener.h  server.h  serverfactory.h  session.h  sessionfactory.h
httpadapter/include/public/httpadapter/concepts/: serverconcept.h
httpadapter/include/public/httpadapter/converters/: accesstoken.h  bestiary.h  buyrequest.h  character.h  createguildrequest.h  credentials.h  equipment.h  equiprequest.h  fight.h  fightactor.h  fightevent.h  fightrequest.h  guild.h  guildlist.h  inventory.h  item.h  itemcategory.h  joinguildrequest.h  monster.h  sellrequest.h  shop.h  unequiprequest.h
httpadapter/include/public/httpadapter/core/: frontcontroller.h  handler.h  method.h  request.h  response.h  target.h
httpadapter/include/public/httpadapter/core/concepts/: constructibleto.h  convertiblefrom.h  getresponding.h  postresponding.h  targeted.h
httpadapter/include/public/httpadapter/utility/: defaultresponse.h  requesthandler.h
httpadapter/src/actions/: accesstokengetter.cc  bestiarygetter.cc  buyer.cc  charactergetter.cc  equiper.cc  equipmentgetter.cc  fightcreator.cc  fightgetter.cc  guildcreator.cc  guildgetter.cc  guildjoiner.cc  guildleaver.cc  guildlistgetter.cc  healer.cc  inventorygetter.cc  seller.cc  shopgetter.cc  unequiper.cc  usercreator.cc
httpadapter/src/converters/: accesstoken.cc  bestiary.cc  buyrequest.cc  character.cc  createguildrequest.cc  credentials.cc  equipment.cc  equiprequest.cc  fight.cc  fightactor.cc  fightevent.cc  fightrequest.cc  guild.cc  guildlist.cc  inventory.cc  item.cc  itemcategory.cc  joinguildrequest.cc  monster.cc  sellrequest.cc  shop.cc  unequiprequest.cc
httpadapter/src/utility/: defaultresponse.cc  requesthandler.cc
postgresadapter/: CMakeLists.txt
postgresadapter/include/private/: itemconverter.h
postgresadapter/include/public/postgresadapter/: bestiary.h  characterrepository.h  enemyrepository.h  equipmentrepository.h  guildrepository.h  inventoryrepository.h  itemtyperepository.h  shop.h  userrepository.h
postgresadapter/src/: bestiary.cc  characterrepository.cc  characterrepository.h  enemyrepository.cc  equipmentrepository.cc  guildrepository.cc  inventoryrepository.cc  itemconverter.cc  itemtyperepository.cc  shop.cc  userrepository.cc
ramstorage/: CMakeLists.txt
ramstorage/include/public/ramstorage/: characterrepository.h  userrepository.h
ramstorage/src/: characterrepository.cc  userrepository.cc
src/: main.cc
test/: Dockerfile  test.cc
